--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,7 @@ Options -Indexes
 <IfModule mod_rewrite.c>
 # Activar RewriteEngine
 RewriteEngine on
-RewriteBase /admin2/
+RewriteBase /contacto/
 #RewriteBase /
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
