--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ php_value post_max_size 25M
 php_value max_execution_time 300
 php_value max_input_time 300
 
-Options -Indexes
+#Options -Indexes
 <IfModule mod_rewrite.c>
 # Activar RewriteEngine
 RewriteEngine on
