--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "jossmp/sunatphp": "^2.0"
+        "jossmp/sunatphp": "^2.0",
+        "phpoffice/phpexcel": "^1.8"
     }
 }
